# flare

./: API.md  Cargo.toml  DOCS.md  LICENSE.txt  README.md  default.nix  flake.nix
assets/: defaults.rs  extension_defaults.rs  flare.txt  qst.txt  symbols.json
src/: app.rs  calculator.rs  config.rs  history.rs  main.rs  symbols.rs  ui.rs
src/extensions/: api.rs  battery.rs  bluetooth.rs  calculator.rs  clipboard.rs  files.rs  help.rs  mod.rs  runner.rs  sudo.rs  symbols.rs  volume.rs
